# changen

./: .gitignore  .prettierignore  ACKNOWLEDGEMENT.md  CHANGELOG.md  Cargo.toml  DEV.md  README.md  justfile  tag.sh  test copy.json  test.json
.cargo/: config.toml
.github/workflows/: changelog.yml  changelog_test.yml  ci.yml  create_release_notes_pr.yml  release copy.yml  release.yml  release2.yml
changelog_document/: Cargo.toml  README.md
changelog_document/src/: de.rs  fmt.rs  lib.rs  parser.rs  ser.rs  serializer.rs  test.rs  utils.rs  version.rs
changelog_document/tests/: mutlple_unreleased.err  no_semver.err  scope.expect  scope.nosort.expect  scope.nosort.init  test_map.expect  test_map.init  unreleased_not_at_0.err
changelog_document/tests/fmt/: test_map.expect  test_map.init
commit_parser/: Cargo.toml
commit_parser/src/: lib.rs
config_example/: config.json
parser_test/: Cargo.toml
parser_test/src/: main.rs
res/: API_REFERENCE.md  CHANGELOG_DEFAULT.md  HEADER_FOR_RELEASE.md  api_reference.md  batch_changelog.yml  changelog.yml  map_commit_type_to_section.json
src/: change_log.rs  commit_parser.rs  config.rs  gen_doc.rs  generate.rs  git_helpers_function.rs  lib.rs  main.rs  match_release_title.rs  note_generator.rs  release.rs  release_generation.rs  release_note_generation.rs  repository.rs  test.rs  test_res.rs  utils.rs
src/git_provider/: github.rs  mod.rs
src/git_provider/github/: last_prs.graphql  mod.rs
src/integration_test/: mod.rs  test1.rs
src/integration_test/test1/: test1.expect  test1.init
tests/changelogs/: CHANGELOG1.md  CHANGELOG3.md  CHANGELOG4.md
