[workspace]
members = [".", "changelog_document"]

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/wiiznokes/changelog/"
repository = "https://github.com/wiiznokes/changelog.git"

[package]
name = "changelog"
version = "0.1.0"
keywords = ["changelog", "release", "tool", "release-note"]
description = "Helper program to manage a changelog"
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
changelog = { path = "./changelog_document", package = "changelog_document" }
pom.workspace = true
# regex = "1"

[workspace.dependencies]
pom = { version = "3", features = ["trace"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# thiserror = "1"
