[workspace]
members = [".", "changelog_document"]

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/wiiznokes/changelog-generator"
repository = "https://github.com/wiiznokes/changelog-generator.git"

[package]
name = "changelog-gen"
version = "0.1.2"
keywords = ["changelog", "release", "tool", "release-note"]
description = "Helper program to manage a changelog"
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
changelog = { version = "0.1", package = "changelog_document" }
pom.workspace = true
log = "0.4"
env_logger = "0.11"
cached = "0.53"

[dev-dependencies]
pretty_assertions = "1"
# regex = "1"

[workspace.dependencies]
pom = { version = "3", features = ["trace"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# thiserror = "1"

[patch.crates-io]
# changelog_document = { path = "./changelog_document" }