[workspace]
members = [".", "changelog_document"]
exclude = ["expe"]

[workspace.package]
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/wiiznokes/changelog-generator"
repository = "https://github.com/wiiznokes/changelog-generator.git"

[package]
name = "changelog-gen"
version = "0.1.8"
keywords = ["changelog", "release", "tool", "release-note"]
description = "Helper program to manage a changelog"
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
default-run = "changelog-gen"

# [[bin]]
# name = "gen-doc"
# path = "src/gen_doc.rs"


[dependencies]
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
changelog = { version = "0.1.5", package = "changelog_document" }
pom.workspace = true
log = "0.4"
env_logger = "0.11"
cached = "0.53"
semver = "1"
# derive_more = { version = "1", features = ["display"] }

# todo: bin only https://github.com/rust-lang/cargo/issues/1982
clap-markdown = "0.1"

[dev-dependencies]
pretty_assertions.workspace = true
# regex = "1"

[workspace.dependencies]
pom = { version = "3", features = ["trace"] }
anyhow = "1"
serde = { version = "1.0.201", features = ["derive"] }
pretty_assertions = "1"
# thiserror = "1"

[patch.crates-io]
# changelog_document = { path = "./changelog_document" }
