[package]
name = "changelog_document"
version = "0.1.6-rc4"
categories = ["parsing"]
keywords = ["changelog", "parser", "serializer", "pom-based", "release-note"]
description = "Feature-rich changelog format. Include a parser and serializer."
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pom.workspace = true
anyhow.workspace = true
serde.workspace = true
indexmap = "2"
semver.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true
